--- a/_posts/OS/2020-08-09-OS_lab1.htm
+++ b/_posts/OS/2020-08-09-OS_lab1.htm
@@ -289,14 +289,13 @@ style='font-family:华文中宋'>b)<span style='font:7.0pt "Times New Roman"'>&n
 <p class=MsoNormal style='margin-left:63.0pt'><span style='font-family:华文中宋'>显存的段地址为B800，其与屏幕上字符的对应关系为：</span></p>
 
 <p class=MsoNormal style='margin-left:63.0pt'><span lang=EN-US
-style='font-family:华文中宋'><img width=339 height=153 id="Picture 4"
+style='font-family:华文中宋'><img id="Picture 4"
 src="/assets/source/OS/2020-08-09-OS_lab1.files/image002.png"></span></p>
 
 <p class=MsoNormal style='margin-left:63.0pt'><span style='font-family:华文中宋'>且字符的显示属性为：</span></p>
 
 <p class=MsoNormal style='margin-left:63.0pt'><span lang=EN-US
-style='font-family:华文中宋'><img width=379 height=137
-src="/assets/source/OS/2020-08-09-OS_lab1.files/image003.png"></span></p>
+style='font-family:华文中宋'><img src="/assets/source/OS/2020-08-09-OS_lab1.files/image003.png"></span></p>
 
 <p class=MsoNormal style='margin-left:62.95pt;text-indent:21.0pt'><span
 style='font-family:华文中宋'>因而，假定我们将要显示的字符坐标为(x, y)，并把x存于DL中，y存与DH中，则显存地址的偏移量便可表示为(80
@@ -1281,15 +1280,13 @@ style='line-height:150%;font-family:华文中宋'>使用VMware Workstation配置
 150%;text-autospace:none'><span style='line-height:150%;font-family:华文中宋'>如下图，我们配置一个内存为4MB，处理器为1个，软盘映像为我们刚刚制作的“letter_impact.boot”文件的虚拟机。</span></p>
 
 <p class=MsoNormal style='margin-left:42.0pt;line-height:150%;text-autospace:
-none'><span lang=EN-US><img width=496 height=234
-src="/assets/source/OS/2020-08-09-OS_lab1.files/image006.png"></span></p>
+none'><span lang=EN-US><img src="/assets/source/OS/2020-08-09-OS_lab1.files/image006.png"></span></p>
 
 <p class=MsoNormal style='margin-left:41.95pt;text-indent:21.0pt;line-height:
 150%;text-autospace:none'><span style='line-height:150%;font-family:华文中宋'>配置完毕后，开启虚拟机，屏幕如下显示：</span></p>
 
 <p class=MsoNormal style='margin-left:42.0pt;line-height:150%;text-autospace:
-none'><span lang=EN-US><img width=495 height=282
-src="/assets/source/OS/2020-08-09-OS_lab1.files/image007.png"></span></p>
+none'><span lang=EN-US><img src="/assets/source/OS/2020-08-09-OS_lab1.files/image007.png"></span></p>
 
 <p class=MsoNormal style='margin-left:41.95pt;text-indent:21.0pt;line-height:
 150%;text-autospace:none'><span style='line-height:150%;font-family:华文中宋'>虚拟机进入了我们的“字母碰撞”程序，这代表我们接管了裸机的控制权。至此，实验圆满结束！</span></p>
