--- a/_posts/OS/2020-08-09-OS_lab3.htm
+++ b/_posts/OS/2020-08-09-OS_lab3.htm
@@ -2,7 +2,7 @@
 layout: article
 title: SYSU-《操作系统原理》-实验3：用汇编与C语言开发独立内核
 tag: OS
-key: OS_lab2
+key: OS_lab3
 show_subscribe: false
 license: false
 ---
@@ -404,7 +404,7 @@ text-decoration:none'>.. </span><span
 style='color:windowtext;display:none;text-decoration:none'>1</span></a></span></p>
 
 <p class=MsoToc1><span lang=EN-US><a href="#_Toc10938156"><span lang=EN-US><span
-lang=EN-US>实验三：用汇编与C</span></span><span lang=EN-US><span lang=EN-US>语言开发独立内核</span></span><span
+lang=EN-US>实验三：用汇编与C语言开发独立内核</span></span><span
 style='color:windowtext;display:none;text-decoration:none'>.. </span><span
 style='color:windowtext;display:none;text-decoration:none'>2</span></a></span></p>
 
@@ -797,9 +797,7 @@ name="_Toc10252855"></a><a name="_Toc10138909"></a><a name="_Toc9694006"></a><a
 name="_Toc9550112"></a><a name="_Toc9539583"></a><a name="_Toc9539546"></a><a
 name="_Toc9539512"></a><a name="_Toc9342810"></a><a name="_Toc9342620"></a><a
 name="_Toc9361257"></a><a name="_Toc9340649"></a><a name="_Toc9282815"></a><a
-name="_Toc9270554"></a><a name="_Toc9103882"><span style='font-family:华文中宋'>实验三：</span></a><span
-style='font-family:华文中宋'>用汇编与</span><span lang=EN-US>C</span><span
-style='font-family:华文中宋'>语言开发独立内核</span></h1>
+name="_Toc9270554"></a><a name="_Toc9103882"><span style='font-family:华文中宋'>实验三：用汇编与语言开发独立内核</span></h1>
 
 <p class=MsoSubtitle style='margin-left:0cm;text-indent:0cm'><a
 name="_Toc10938157"></a><a name="_Toc10748854"></a><a name="_Toc10655567"></a><a
@@ -988,7 +986,7 @@ lang=EN-US>boot</span>的大小大于一个扇区的大小。因而，新的<spa
   <p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
   lang=EN-US style='font-family:华文中宋'>&nbsp;</span></p>
   <p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
-  style='font-family:华文中宋'>图（<span lang=EN-US>1</span>） &nbsp;<span lang=EN-US>lsyOS</span>的引导过程</span></p>
+  style='font-family:华文中宋'>图（1）&nbsp;lsyOS的引导过程</span></p>
   </td>
  </tr>
 </table>
